feat(style): Allow styling via CSS Initial work on allowing style overrides Need to figure out a way to allow the attribute binding as well Issue #188

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,17 @@ body {
 strong {
   font-weight: 500;
 }
+
+.custom-switches {
+  .ui-switch {
+    background: #999999;
+  }
+
+  .ui-switch small {
+    background: #333333;
+  }
+
+  .ui-switch.checked {
+    background: #61435d;
+  }
+}
