--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -108,5 +108,38 @@
         </p>
       </div>
     </div>
+    <hr />
+    <div class="row">
+      <div class="col-12">
+        <h2>Custom Switch Content</h2>
+        <p class="custom-icons">
+          <ui-switch uncheckedLabel="off"
+                     checkedLabel="on"
+                     size="small">
+            <i class="fa fa-check"
+              style="height:10px; width:10px; margin-left:30%;margin-top:1%; font-size:10px;"
+            ></i>
+          </ui-switch>
+
+          <ui-switch uncheckedLabel="off"
+                     checkedLabel="on">
+            <i
+              style="height:15px; width:15px; margin-left:25%;margin-top:25%; font-size:15px;"
+              class="fa fa-check"></i>
+          </ui-switch>
+
+
+          <ui-switch uncheckedLabel="off"
+                     checkedLabel="on"
+                     size="large">
+            <i class="fa fa-check"
+              style="height:20px; width:20px; margin-left:25%;margin-top:25%; font-size:18px;">
+            </i>
+
+
+          </ui-switch>
+        </p>
+      </div>
+    </div>
   </div>
 </div>
