fix(style): Fix small style when checked

--- a/src/lib/ui-switch/ui-switch.component.scss
+++ b/src/lib/ui-switch/ui-switch.component.scss
@@ -97,7 +97,7 @@ $sw-lg-min-width: 60px;
 
   &.checked {
     background: rgb(100, 189, 99);
-    &.checked small {
+    small {
       right: 0;
       left: auto;
     }
