--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -11,8 +11,7 @@
     <h4>Disabled</h4>
     <p>
       <ui-switch disabled></ui-switch>
-      <ui-switch checked
-                 [disabled]="true"></ui-switch>
+      <ui-switch checked [disabled]="true"></ui-switch>
     </p>
 
     <h4>Change</h4>
@@ -116,22 +115,26 @@
           <ui-switch uncheckedLabel="off"
                      checkedLabel="on"
                      size="small">
-            <i class="fa fa-check"
-               style="height:10px; width:10px; margin-left:30%;margin-top:1%; font-size:10px;"></i>
+            <i class="fa fa-check"></i>
           </ui-switch>
 
           <ui-switch uncheckedLabel="off"
                      checkedLabel="on">
-            <i style="height:15px; width:15px; margin-left:25%;margin-top:25%; font-size:15px;"
-               class="fa fa-check"></i>
+            <i class="fa fa-check"></i>
           </ui-switch>
 
           <ui-switch uncheckedLabel="off"
                      checkedLabel="on"
                      size="large">
-            <i class="fa fa-check"
-               style="height:20px; width:20px; margin-left:25%;margin-top:25%; font-size:18px;">
-            </i>
+            <i class="fa fa-check fa-2x"></i>
+          </ui-switch>
+        </p>
+        <h4>Before Change handling + Loading Icon Example</h4>
+        <p>
+          <ui-switch [loading]="isLoading" [beforeChange]="fakeAsync" [(ngModel)]="enable">
+            <i class="fa fa-check" *ngIf="enable && !isLoading"></i>
+            <i class="fa fa-times" *ngIf="!enable && !isLoading"></i>
+            <i class="fa fa-spinner fa-pulse" *ngIf="isLoading"></i>
           </ui-switch>
         </p>
       </div>
