--- a/src/lib/ui-switch/ui-switch.component.scss
+++ b/src/lib/ui-switch/ui-switch.component.scss
@@ -85,28 +85,29 @@ $sw-lg-min-width: 60px;
     transition: 0.3s ease-out all;
     -webkit-transition: 0.3s ease-out all;
     background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-
   // populate &.small, &.medium, &.large classes
-  @include config-switch-sizes(
-    'switch-',
-    'small' $sw-sm-knob-size,
-    'medium' $sw-md-knob-size,
-    'large' $sw-lg-knob-size
-  );
+  @include config-switch-sizes( 'switch-', 'small' $sw-sm-knob-size, 'medium' $sw-md-knob-size, 'large' $sw-lg-knob-size );
 
   &.checked {
     background: rgb(100, 189, 99);
+
     small {
       right: 0;
       left: auto;
     }
+
     .switch-pane {
       top: 0;
+
       .switch-label {
         &-checked {
           opacity: 1;
         }
+
         &-unchecked {
           opacity: 0;
         }
@@ -129,6 +130,7 @@ $sw-lg-min-width: 60px;
     top: -100%;
     position: relative;
     pointer-events: none;
+
     > span {
       display: block;
       min-height: 100%;
@@ -138,9 +140,22 @@ $sw-lg-min-width: 60px;
       &-checked {
         opacity: 0;
       }
+
       &-unchecked {
         opacity: 1;
       }
+    }
+  }
+
+  &.loading {
+    background-color: #f1f1f1;
+
+    small {
+      background-color: transparent;
+      border: none;
+      box-shadow: none;
+      right: 50%;
+      transform: translateX(50%);
     }
   }
 }
