Added the 2 properties checkedTextColor/uncheckedTextColor to change the text color og the labels

--- a/src/lib/ui-switch/ui-switch.component.scss
+++ b/src/lib/ui-switch/ui-switch.component.scss
@@ -137,6 +137,8 @@ $sw-lg-min-width: 60px;
     }
 
     .switch-label {
+      color: black;
+      
       &-checked {
         opacity: 0;
       }
