Added the demo for the textColor properties

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -53,6 +53,11 @@
       <ui-switch switchColor="red"></ui-switch>
       <ui-switch switchColor="blue"></ui-switch>
     </p>
+
+    <h4>textColor</h4>
+    <p>
+      <ui-switch uncheckedTextColor="red" checkedTextColor="blue" checkedLabel="ON" uncheckedLabel="OFF"></ui-switch>
+    </p>
   </div>
 
   <div class="col-lg-5 col-sm-6 border-left pl-5">
@@ -104,6 +109,13 @@
           <ui-switch checkedLabel="SUPERDUPERLONGLABEL"
                      uncheckedLabel="SUPERDUPERLONGLABEL"
                      size="large"></ui-switch>
+        </p>
+        <p>
+          <ui-switch reverse
+                     uncheckedLabel="off"
+                     checkedLabel="on"
+                     uncheckedTextColor="orange"
+                     checkedTextColor="red"></ui-switch>
         </p>
       </div>
     </div>
