fix(switch): Fix css alignment for custom text

--- a/src/lib/ui-switch/ui-switch.component.scss
+++ b/src/lib/ui-switch/ui-switch.component.scss
@@ -134,7 +134,7 @@ $sw-lg-min-width: 60px;
     min-height: 100%;
     justify-content: flex-start;
     align-items: center;
-    top: -100%;
+    top: 0;
     position: relative;
     pointer-events: none;
 
