ci(github): Add build workflow
* Add eslint for Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
 </div>
 
 <div class="mt-5">
-  <github-link></github-link>
+  <app-github-link></app-github-link>
   <app-footer></app-footer>
 </div>
