--- a/src/lib/ui-switch/ui-switch.component.html
+++ b/src/lib/ui-switch/ui-switch.component.html
@@ -3,6 +3,7 @@
   class="switch"
   role="switch"
   [attr.aria-checked]="checked"
+  [attr.aria-label]="ariaLabel"
   [class.checked]="checked"
   [class.disabled]="disabled"
   [class.loading]="loading"
