Added the disabled state to the disabled attribute on the html button element.

--- a/src/lib/ui-switch/ui-switch.component.html
+++ b/src/lib/ui-switch/ui-switch.component.html
@@ -2,6 +2,7 @@
   type="button"
   class="switch"
   role="switch"
+  [disabled]="disabled"
   [attr.aria-checked]="checked"
   [attr.aria-label]="ariaLabel"
   [class.checked]="checked"
