--- a/src/lib/ui-switch/ui-switch.component.html
+++ b/src/lib/ui-switch/ui-switch.component.html
@@ -2,9 +2,9 @@
   type="button"
   class="switch"
   role="switch"
-  [attr.aria-checked]="checked"
+  [attr.aria-checked]="reverse ? !checked : checked"
   [attr.aria-label]="ariaLabel"
-  [class.checked]="checked"
+  [class.checked]="reverse ? !checked : checked"
   [class.disabled]="disabled"
   [class.loading]="loading"
   [class.switch-large]="size === 'large'"
