--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -2,31 +2,33 @@
   <div class="col-lg-5 col-sm-6">
     <h2>Basic Usage</h2>
 
-    <h4>checked</h4>
+    <h4>Checked by Default</h4>
     <p>
       <ui-switch checked [ariaLabel]="'checked'"></ui-switch>
+    </p>
+
+    <h4>Unchecked by Default</h4>
+    <p>
       <ui-switch [ariaLabel]="'unchecked'" [checked]="false"></ui-switch>
     </p>
 
-    <h4>Disabled</h4>
+    <h4>Disabled (checked)</h4>
     <p>
-      <ui-switch disabled></ui-switch>
       <ui-switch checked [disabled]="true"></ui-switch>
     </p>
 
-    <h4>Change</h4>
-    <ui-switch (change)="onChange($event)" [ariaLabel]="'Change'"></ui-switch>
-    <p>change count {{ count }}</p>
-    <p>value {{ change }}</p>
+    <h4>Disabled (unchecked)</h4>
+    <p>
+      <ui-switch disabled></ui-switch>
+    </p>
 
-    <h4>Value Change</h4>
-    <ui-switch (valueChange)="onValueChange($event)"></ui-switch>
-    <p>value {{ valueChange }}</p>
+    <h4>reverse</h4>
+    <p>
+      <ui-switch reverse></ui-switch>
+    </p>
+  </div>
 
-    <h4>Change Event</h4>
-    <ui-switch (changeEvent)="onChangeEvent($event)"></ui-switch>
-    <p>event {{ changeEvent }}</p>
-
+  <div class="col-lg-5 col-sm-6 border-left pl-5">
     <h4>Size</h4>
     <p>
       <ui-switch size="small"></ui-switch>
@@ -34,15 +36,12 @@
       <ui-switch size="large"></ui-switch>
     </p>
 
-    <h4>reverse</h4>
+    <h4>Color</h4>
     <p>
-      <ui-switch reverse></ui-switch>
+      <ui-switch></ui-switch>
+      <ui-switch color="blue"></ui-switch>
+      <ui-switch color="red"></ui-switch>
     </p>
-
-    <h4>color</h4>
-    <ui-switch></ui-switch>
-    <ui-switch color="blue"></ui-switch>
-    <ui-switch color="red"></ui-switch>
 
     <h4>switchColor</h4>
     <p>
@@ -59,22 +58,9 @@
         uncheckedLabel="OFF"
       ></ui-switch>
     </p>
-  </div>
 
-  <div class="col-lg-5 col-sm-6 border-left pl-5">
-    <h2>
-      <span class="font-weight-bold">ngModel</span>
-      Usage
-    </h2>
-    <div class="row">
-      <div class="col-12">
-        <h4>two way binding</h4>
-        <ui-switch [(ngModel)]="enable"></ui-switch>
-        <p>Current Value: {{ enable }}</p>
-      </div>
-      <app-demo-cdr></app-demo-cdr>
-    </div>
     <hr />
+
     <div class="row custom-switches">
       <div class="col-12">
         <h2>Custom CSS</h2>
@@ -84,22 +70,16 @@
         </p>
       </div>
     </div>
+
     <hr />
+
     <div class="row">
       <div class="col-12">
         <h2>Custom labels</h2>
         <p>
-          <ui-switch
-            uncheckedLabel="off"
-            checkedLabel="on"
-            size="small"
-          ></ui-switch>
+          <ui-switch uncheckedLabel="off" checkedLabel="on" size="small"></ui-switch>
           <ui-switch uncheckedLabel="off" checkedLabel="on"></ui-switch>
-          <ui-switch
-            uncheckedLabel="off"
-            checkedLabel="on"
-            size="large"
-          ></ui-switch>
+          <ui-switch uncheckedLabel="off" checkedLabel="on" size="large"></ui-switch>
         </p>
 
         <p>
@@ -108,10 +88,7 @@
             uncheckedLabel="Super Long Label"
             size="small"
           ></ui-switch>
-          <ui-switch
-            checkedLabel="Super Long Label"
-            uncheckedLabel="Super Long Label"
-          ></ui-switch>
+          <ui-switch checkedLabel="Super Long Label" uncheckedLabel="Super Long Label"></ui-switch>
           <ui-switch
             checkedLabel="Super Long Label"
             uncheckedLabel="Super Long Label"
@@ -129,7 +106,9 @@
         </p>
       </div>
     </div>
+
     <hr />
+
     <div class="row">
       <div class="col-12">
         <h2>Custom Switch Content</h2>
@@ -151,10 +130,10 @@
           <ui-switch
             [loading]="isLoading"
             [beforeChange]="fakeAsync"
-            [(ngModel)]="enable"
+            [(ngModel)]="beforeChangeValue"
           >
-            <i class="fa fa-check" *ngIf="enable && !isLoading"></i>
-            <i class="fa fa-times" *ngIf="!enable && !isLoading"></i>
+            <i class="fa fa-check" *ngIf="beforeChangeValue && !isLoading"></i>
+            <i class="fa fa-times" *ngIf="!beforeChangeValue && !isLoading"></i>
             <i class="fa fa-spinner fa-pulse" *ngIf="isLoading"></i>
           </ui-switch>
         </p>
@@ -165,27 +144,73 @@
 
 <hr />
 
-<form class="form-row" #demoForm="ngForm" (ngSubmit)="onSubmit($event)">
-  <div class="col">
-    <label for="feature-name">Name</label>
-    <input type="text" class="form-control" id="feature-name" />
+<div class="row justify-content-center">
+  <div class="col-lg-5 col-sm-6">
+    <h2>Events</h2>
+
+    <h4>Change</h4>
+    <ui-switch (change)="onChange($event)" [ariaLabel]="'Change'"></ui-switch>
+    <p>change count {{ count }}</p>
+    <p>Current Value: {{ change }}</p>
+
+    <h4>Value Change</h4>
+    <ui-switch (valueChange)="onValueChange($event)"></ui-switch>
+    <p>Current Value: {{ valueChange }}</p>
+
+    <h4>Change Event</h4>
+    <ui-switch (changeEvent)="onChangeEvent($event)"></ui-switch>
+    <p>event {{ changeEvent }}</p>
   </div>
 
-  <div class="col">
-    <label for="enable-feature">Enable Feature</label>
-    <ui-switch
-      class="custom-control"
-      id="enable-feature"
-      [(ngModel)]="enableFeature"
-      name="enableFeature"
-    ></ui-switch>
-  </div>
+  <div class="col-lg-5 col-sm-6 border-left pl-5">
+    <h2>
+      <span class="font-weight-bold">ngModel</span>
+      Usage
+    </h2>
+    <div class="row">
+      <div class="col-12">
+        <h4>two way binding</h4>
+        <ui-switch [(ngModel)]="enable"></ui-switch>
+        <p>Current Value: {{ enable }}</p>
+      </div>
+    </div>
 
+    <h2>Change Detection <span class="font-italic">OnPush</span></h2>
+    <div class="row">
+      <app-demo-cdr></app-demo-cdr>
+    </div>
+  </div>
+</div>
+
+<hr />
+
+<div class="container mt-5">
   <div *ngIf="submitted" class="col-12 alert alert-info" role="alert">
-    Submitted!
+    Form Submitted!
+
+    <pre class="mt-2"><code>{{ submittedValue | json }}</code></pre>
   </div>
 
-  <div class="col-12 mt-4">
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </div>
-</form>
+  <form class="form-row my-3" #demoForm="ngForm" (ngSubmit)="onSubmit($event)">
+    <div class="col-lg-5 col-sm-6">
+      <label for="feature-name">Name</label>
+      <input type="text" class="form-control" id="feature-name" />
+    </div>
+
+    <div class="col-lg-5 col-sm-6 border-left ml-3 pl-3">
+      <label for="enable-feature">Enable Feature</label>
+      <ui-switch
+        class="custom-control"
+        id="enable-feature"
+        [(ngModel)]="enableFeature"
+        name="enableFeature"
+      ></ui-switch>
+    </div>
+
+    <div class="col-12 mt-4">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </form>
+
+  <p>Current Value: {{ enableFeature }}</p>
+</div>
